k8s/data-vault-svc.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: data-vault
    namespace: default
    labels:
        app: data-vault
spec:
    replicas: 1
    selector:
        matchLabels:
            app: data-vault
    strategy:
        type: RollingUpdate
        rollingUpdate:
            maxSurge: 50%
            maxUnavailable: 25%
    template:
        metadata:
            #This annotation is required for linkerd to know the cpu request.
            annotations:
                config.linkerd.io/proxy-cpu-request: "0.2"
            labels:
                app: data-vault
        spec:
            containers:
                - name: data-vault
                  image: ibct/data-vault:latest
                  resources:
                      requests:
                          cpu: "0.2"
                          memory: 300Mi
                      limits:
                          cpu: "1"
                          memory: 1000Mi
            imagePullSecrets:
                - name: docker-secret
---
kind: Service
apiVersion: v1
metadata:
    name: data-vault-svc
    namespace: default
    labels:
        app: data-vault
spec:
    selector:
        app: data-vault
    ports:
        - name: http
          protocol: TCP
          port: 7000
          targetPort: 7000
