k8s/lit-hub-svc.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: lit-hub
    namespace: default
    labels:
        app: lit-hub
spec:
    replicas: 1
    selector:
        matchLabels:
            app: lit-hub
    strategy:
        type: RollingUpdate
        rollingUpdate:
            maxSurge: 50%
            maxUnavailable: 25%
    template:
        metadata:
            #This annotation is required for linkerd to know the cpu request.
            annotations:
                config.linkerd.io/proxy-cpu-request: "0.2"
            labels:
                app: lit-hub
        spec:
            containers:
                - name: lit-hub
                  image: ibct/lit-hub:latest
                  resources:
                      requests:
                          cpu: "0.2"
                          memory: 300Mi
                      limits:
                          cpu: "1"
                          memory: 1000Mi
            imagePullSecrets:
                - name: docker-secret
---
kind: Service
apiVersion: v1
metadata:
    name: lit-hub-svc
    namespace: default
    labels:
        app: lit-hub
spec:
    selector:
        app: lit-hub
    ports:
        - name: http
          protocol: TCP
          port: 8000
          targetPort: 8000
